Fix error in celery configuration

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -13,7 +13,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:celery]
-command=python3 -m celery -A app worker
+command=python3 -m celery -A main.celery worker
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
